Add fresh MannMitra website files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <textarea id="symptomInput" placeholder="e.g. headache, anxiety, feeling low, can't sleep"></textarea>
       <div class="controls">
         <button id="checkBtn">Check Remedies 🔍</button>
-        <button id="clearBtn">Clear ✖️</button>
+        <button id="clearBtn">Clear ✖</button>
         <label class="small"><input id="showAll" type="checkbox" /> Show all matches 📌</label>
       </div>
       <p class="note">Educational: Not a medical diagnosis. For emergencies, contact a healthcare professional immediately.</p>
@@ -43,9 +43,9 @@
     <section class="card">
       <h2>Data Structures Used 💡</h2>
       <ul>
-        <li><strong>Array (`CONDITIONS`)</strong> — Stores all 40 conditions as objects (id, keywords, remedies, etc.).</li>
-        <li><strong>Map (`keywordMap`)</strong> — Maps keyword → set of condition IDs for fast lookup.</li>
-        <li><strong>Queue (`recentQueriesQueue`)</strong> — Stores the last 5 user queries (FIFO behavior).</li>
+        <li><strong>Array (CONDITIONS)</strong> — Stores all 40 conditions as objects (id, keywords, remedies, etc.).</li>
+        <li><strong>Map (keywordMap)</strong> — Maps keyword → set of condition IDs for fast lookup.</li>
+        <li><strong>Queue (recentQueriesQueue)</strong> — Stores the last 5 user queries (FIFO behavior).</li>
       </ul>
     </section>
 
@@ -65,7 +65,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>⚠️ For emergencies, call local emergency services immediately.</p>
+    <p>⚠ For emergencies, call local emergency services immediately.</p>
   </footer>
 
   <!-- Script -->
